Bug 95463 - Floating Navigator opens with much too small a default size in Writer
Summary: Floating Navigator opens with much too small a default size in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium trivial
Assignee: Kumar Thangavel
URL:
Whiteboard: target:5.2.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2015-10-31 02:45 UTC by Björn Michaelsen
Modified: 2016-10-25 19:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Michaelsen 2015-10-31 02:45:20 UTC
Steps to reproduce:
0/ Have an empty/clean profile
1/ Create a new writer document
2/ Press F5 to pop the floating navigator

Expected result:
A reasonably sized navigator window pops up

Actual result:
A window with only four lines displayed in the default view (and thus requiring scroll bars from the start as even an empty document has more entries in the content view).

This is because the floating navigator always pops up with the minimal possible window size. That might have been sensible on small 1990'ies screen, it isnt anymore.

Suggested solution: Open the navigator window with twice the minimal height instead of the minimal height.

Code pointers:
SetOutputSizePixel() in SwNavigationPI::SwNavigationPI(..) in sw/source/uibase/utlui/navipi.cxx based on nZoomOutInit
Comment 1 Robinson Tryon (qubit) 2015-12-13 11:00:57 UTC Comment hidden (obsolete)
Comment 2 Susobhan Ghosh 2016-01-06 05:58:26 UTC
Hi! I'd like to take this up.
Comment 3 Kumar Thangavel 2016-01-06 06:01:19 UTC
(In reply to Susobhan Ghosh from comment #2)
> Hi! I'd like to take this up.

patch has been submitted for this bug. Waiting for review.
Thanks
Comment 4 Commit Notification 2016-01-08 11:43:21 UTC
kumar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=861661313e9782ebbfe32b801b9e0968aae0c946

tdf#95463 Fixed floating navigator default size, now size is increased

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Björn Michaelsen 2016-01-11 10:26:14 UTC
(In reply to Commit Notification from comment #4)
> kumar committed a patch related to this issue.
> It has been pushed to "master":

... and thus seems to be fixed. Thanks to kumar for the work!
Comment 6 Robinson Tryon (qubit) 2016-02-18 16:37:07 UTC Comment hidden (obsolete)