tdf#95463 Fixed floating navigator default size, now size is increased

Change-Id: I8a1112fa94295c99870d50cb7147582d5eaf9630